fix cards alignment

--- a/style.css
+++ b/style.css
@@ -51,8 +51,10 @@ header {
 
 #cards {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   gap: 32px;
+  padding: 0 24px;
 }
 
 .card {
@@ -116,33 +118,27 @@ header {
   color: #e1e1e6;
 }
 
+.card ul li img {
+  width: 50px;
+  height: 50px;
+}
+
 .card h2:hover,
 .card ul li strong:hover,
 .card ul li img:hover {
   transform: scale(1.1);
+  cursor: default;
 }
 
 .card h2,
 .card ul li strong,
 .card ul li img {
-  transition: transform 0.3s;
+  transition: all 4s ease;
 }
 
 .card {
   opacity: 0;
-  animation: appear 0.2s forwards;
-}
-
-@keyframes appear {
-  0% {
-    transform: translateY(-50px);
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
+  animation: appear 3s forwards;
 }
 
 footer .wrapper {
@@ -173,39 +169,20 @@ footer a {
   color: white;
 }
 
-@media (min-width: 700px) {
-  #cards {
-    max-width: 670px;
-    flex-direction: row;
-    flex-wrap: wrap;
+@keyframes appear {
+  0% {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+  100% {
+    opacity: 100;
   }
 }
 
-@media (min-width: 800px) {
+@media screen and (min-width: 500px) {
   #cards {
+    max-width: 1440px;
     flex-direction: row;
-    max-width: 670px;
     flex-wrap: wrap;
-  }
-
-  @keyframes appear {
-    0% {
-      opacity: 0;
-      transform: translatex(-5rem);
-    }
-
-    100% {
-      opacity: 1;
-      transform: translatex(0);
-    }
-  }
-}
-
-@media (min-width: 1200px) {
-  #cards {
-    display: grid;
-    place-content: center;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 3.2rem;
   }
 }
